chore: tabulify-flow compile